--- a/DataBase/packages.config
+++ b/DataBase/packages.config
@@ -3,6 +3,7 @@
   <package id="DocumentFormat.OpenXml" version="3.0.1" targetFramework="net48" />
   <package id="DocumentFormat.OpenXml.Framework" version="3.0.1" targetFramework="net48" />
   <package id="DocX" version="3.0.0" targetFramework="net48" />
+  <package id="EPPlus" version="5.0.3" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.1" targetFramework="net48" />
   <package id="Microsoft.Bcl.HashCode" version="1.1.1" targetFramework="net48" />
   <package id="Microsoft.EntityFrameworkCore" version="3.1.32" targetFramework="net48" />
@@ -21,6 +22,7 @@
   <package id="Microsoft.Extensions.Primitives" version="3.1.32" targetFramework="net48" />
   <package id="MySqlConnector" version="2.2.5" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
+  <package id="OfficeOpenXml.Extension.AspNetCore" version="1.0.0" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.Collections.Immutable" version="1.7.1" targetFramework="net48" />
   <package id="System.ComponentModel.Annotations" version="4.7.0" targetFramework="net48" />
