--- a/DataBase/packages.config
+++ b/DataBase/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Aspose.Words" version="24.12.0" targetFramework="net48" />
   <package id="DocumentFormat.OpenXml" version="3.0.1" targetFramework="net48" />
   <package id="DocumentFormat.OpenXml.Framework" version="3.0.1" targetFramework="net48" />
   <package id="DocX" version="3.0.0" targetFramework="net48" />
@@ -31,4 +32,7 @@
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
+  <package id="Xceed.Document.NET" version="3.0.24152.1219" targetFramework="net48" />
+  <package id="Xceed.Pdf" version="3.0.24152.1219" targetFramework="net48" />
+  <package id="Xceed.Words.NET" version="3.0.24152.1219" targetFramework="net48" />
 </packages>
