add and work on Will

--- a/DataBase/DataBase.csproj
+++ b/DataBase/DataBase.csproj
@@ -439,6 +439,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <None Include="appsettings.json" />
+    <Content Include="DocTemplates\ШаблонЗаповіт.docx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
