--- a/DataBase/DataBase.csproj
+++ b/DataBase/DataBase.csproj
@@ -442,6 +442,9 @@
     <Content Include="DocTemplates\ШаблонЗаповіт.docx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="DocTemplates\Картка_Шаблон.doc">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
