--- a/DataBase/DataBase.csproj
+++ b/DataBase/DataBase.csproj
@@ -439,11 +439,11 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <None Include="appsettings.json" />
-    <Content Include="DocTemplates\ШаблонЗаповіт.docx">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
     <Content Include="DocTemplates\Картка_Шаблон.doc">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="DocTemplates\Шаблон_заповіт.docx">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
