--- a/DataBase/packages.config
+++ b/DataBase/packages.config
@@ -4,7 +4,9 @@
   <package id="DocumentFormat.OpenXml" version="3.0.1" targetFramework="net48" />
   <package id="DocumentFormat.OpenXml.Framework" version="3.0.1" targetFramework="net48" />
   <package id="DocX" version="3.0.0" targetFramework="net48" />
-  <package id="EPPlus" version="5.0.3" targetFramework="net48" />
+  <package id="EPPlus" version="6.0.3" targetFramework="net48" />
+  <package id="EPPlus.Interfaces" version="6.0.0" targetFramework="net48" />
+  <package id="EPPlus.System.Drawing" version="6.0.0" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.1" targetFramework="net48" />
   <package id="Microsoft.Bcl.HashCode" version="1.1.1" targetFramework="net48" />
   <package id="Microsoft.EntityFrameworkCore" version="3.1.32" targetFramework="net48" />
@@ -21,16 +23,18 @@
   <package id="Microsoft.Extensions.Logging.Abstractions" version="3.1.32" targetFramework="net48" />
   <package id="Microsoft.Extensions.Options" version="3.1.32" targetFramework="net48" />
   <package id="Microsoft.Extensions.Primitives" version="3.1.32" targetFramework="net48" />
+  <package id="Microsoft.IO.RecyclableMemoryStream" version="2.3.2" targetFramework="net48" />
   <package id="MySqlConnector" version="2.2.5" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
   <package id="OfficeOpenXml.Extension.AspNetCore" version="1.0.0" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.Collections.Immutable" version="1.7.1" targetFramework="net48" />
-  <package id="System.ComponentModel.Annotations" version="4.7.0" targetFramework="net48" />
+  <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net48" />
   <package id="System.Diagnostics.DiagnosticSource" version="6.0.0" targetFramework="net48" />
   <package id="System.Memory" version="4.5.5" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
+  <package id="System.Security.Cryptography.Xml" version="8.0.2" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
   <package id="Xceed.Document.NET" version="3.0.24152.1219" targetFramework="net48" />
   <package id="Xceed.Pdf" version="3.0.24152.1219" targetFramework="net48" />
