--- a/DataBase/DataBase.csproj
+++ b/DataBase/DataBase.csproj
@@ -232,6 +232,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AddPlot.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AddPlot.Designer.cs">
+      <DependentUpon>AddPlot.cs</DependentUpon>
+    </Compile>
     <Compile Include="AppSettings.cs" />
     <Compile Include="ConfigurationManager.cs" />
     <Compile Include="ConnectionClass.cs" />
@@ -402,6 +408,9 @@
     <None Include="Resources\Додати _Земельну_ділянку.jpg" />
     <None Include="Resources\Земля.jpg" />
     <None Include="Resources\images.jpg" />
+    <EmbeddedResource Include="AddPlot.resx">
+      <DependentUpon>AddPlot.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ExportToDBfromExcel.resx">
       <DependentUpon>ExportToDBfromExcel.cs</DependentUpon>
     </EmbeddedResource>
