Додав заяву на реєстрацію заповіту в НАІС

--- a/DataBase/DataBase.csproj
+++ b/DataBase/DataBase.csproj
@@ -419,6 +419,9 @@
     <Compile Include="ХудобаТаПтицяСтатистика.Designer.cs">
       <DependentUpon>ХудобаТаПтицяСтатистика.cs</DependentUpon>
     </Compile>
+    <Content Include="DocTemplates\Шаблон_заява_заповіт.docx">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <None Include="Resources\Пошук_Землі.jpg" />
     <None Include="Resources\Додати _Земельну_ділянку.jpg" />
     <None Include="Resources\Земля.jpg" />
