Add шаблон довідки по УБД

--- a/DataBase/DataBase.csproj
+++ b/DataBase/DataBase.csproj
@@ -425,6 +425,7 @@
     <Content Include="DocTemplates\Шаблон_довідка_на_субсидію.docx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <None Include="DocTemplates\Шаблон_довідка_УБД.docx" />
     <None Include="Resources\Пошук_Землі.jpg" />
     <None Include="Resources\Додати _Земельну_ділянку.jpg" />
     <None Include="Resources\Земля.jpg" />
