--- a/DataBase/DataBase.csproj
+++ b/DataBase/DataBase.csproj
@@ -98,10 +98,6 @@
     <Reference Include="Aspose.Words, Version=24.12.0.0, Culture=neutral, PublicKeyToken=716fcc553a201e56, processorArchitecture=MSIL">
       <HintPath>..\packages\Aspose.Words.24.12.0\lib\net462\Aspose.Words.dll</HintPath>
     </Reference>
-    <Reference Include="ClassLibrary1, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>bin\Debug\ClassLibrary1.dll</HintPath>
-    </Reference>
     <Reference Include="DocumentFormat.OpenXml, Version=3.0.1.0, Culture=neutral, PublicKeyToken=8fb06cb64d019a17, processorArchitecture=MSIL">
       <HintPath>..\packages\DocumentFormat.OpenXml.3.0.1\lib\net46\DocumentFormat.OpenXml.dll</HintPath>
     </Reference>
@@ -165,10 +161,6 @@
     <Reference Include="Microsoft.IO.RecyclableMemoryStream, Version=2.3.2.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.IO.RecyclableMemoryStream.2.3.2\lib\net462\Microsoft.IO.RecyclableMemoryStream.dll</HintPath>
     </Reference>
-    <Reference Include="MyControlsLibrary">
-      <HintPath>..\..\MyControlsLibrary\bin\Debug\MyControlsLibrary.dll</HintPath>
-    </Reference>
-    <Reference Include="MySql.Data, Version=8.0.31.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d, processorArchitecture=MSIL" />
     <Reference Include="MySqlConnector, Version=2.0.0.0, Culture=neutral, PublicKeyToken=d33d3e53aa5f8c92, processorArchitecture=MSIL">
       <HintPath>..\packages\MySqlConnector.2.2.5\lib\net471\MySqlConnector.dll</HintPath>
     </Reference>
@@ -341,6 +333,12 @@
     <Compile Include="ДомогосподарстваДодати.Designer.cs">
       <DependentUpon>ДомогосподарстваДодати.cs</DependentUpon>
     </Compile>
+    <Compile Include="Заміна_Документа_Перейменування_Вулиці.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Заміна_Документа_Перейменування_Вулиці.Designer.cs">
+      <DependentUpon>Заміна_Документа_Перейменування_Вулиці.cs</DependentUpon>
+    </Compile>
     <Compile Include="Налаштування.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -489,6 +487,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ДомогосподарстваДодати.resx">
       <DependentUpon>ДомогосподарстваДодати.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Заміна_Документа_Перейменування_Вулиці.resx">
+      <DependentUpon>Заміна_Документа_Перейменування_Вулиці.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Налаштування.resx">
       <DependentUpon>Налаштування.cs</DependentUpon>
